syntax = "proto3";

package protos;

import "gorums.proto";
option go_package = ".";

service PBFTNode {
  rpc PrePrepare(PrePrepareRequest) returns (ClientResponse) {
    option (gorums.broadcast) = true;
    //option (gorums.broadcast.call) = "Prepare";
   }
  rpc Prepare(PrepareRequest) returns (Empty) {
    option (gorums.broadcast) = true;
    //option (gorums.broadcast.call) = "Commit";
   }
  rpc Commit(CommitRequest) returns (Empty) {
    option (gorums.broadcast) = true;
    //option (gorums.broadcast.return) = true;
    //option (gorums.broadcast.call) = "Client";
   }
}

message PrePrepareRequest {
  string Id = 1;
  string From = 2;
  string Value = 3;
  int64 Timestamp = 4;
}

message PrepareRequest {
  string Id = 1;
  string Value = 2;
}

message CommitRequest {
  string Id = 1;
  string Value = 2;
}

message CommitResponse {
  string Id = 1;
  string Value = 2;
}

message ClientResponse {
  string Id = 1;
  int32 View = 2;
  int64 Timestamp = 3;
  string Client = 4;
  string From = 5;
  string Result = 6;
}

message Empty {}
